<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gpsdrawing.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:labelFor="@+id/etGroupId"
        android:text="@string/tv_group_id" />

    <EditText
        android:id="@+id/etGroupId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGroupId"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/tvDrawId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etGroupId"
        android:layout_below="@id/etGroupId"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/etDrawId"
        android:text="@string/tv_draw_id" />

    <EditText
        android:id="@+id/etDrawId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etGroupId"
        android:layout_below="@id/tvDrawId"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    
    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rgColor"
        android:layout_below="@+id/etDrawId"
        android:layout_marginTop="20dp"
        android:text="@string/tv_location" />

    <TextView
        android:id="@+id/tvLocationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvLocation"
        android:layout_toRightOf="@+id/tvLocation"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    


    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rgColor"
        android:layout_below="@+id/tvLocation"
        android:layout_marginTop="20dp"
        android:text="@string/tv_color" />
    
    <RadioGroup
        android:id="@+id/rgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etDrawId"
        android:layout_below="@+id/tvColor"
        android:checkedButton="@+id/rbRed" >

        <RadioButton
        	android:id="@+id/rbRed"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/rb_red"
        	android:textColor="#FF0000" />

	    <RadioButton
    	    android:id="@+id/rbGreen"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/rb_green"
        	android:textColor="#00FF00" />
	
    	<RadioButton
    	    android:id="@+id/rbBlue"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
        	android:text="@string/rb_blue"
        	android:textColor="#0000FF" />
    
    </RadioGroup>

    

    <TextView
        android:id="@+id/tvPen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tbPen"
        android:layout_alignLeft="@+id/tbPen"
        android:layout_marginLeft="18dp"
        android:text="@string/tv_pen" />
    
    <ToggleButton
        android:id="@+id/tbPen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rgColor"
        android:layout_alignRight="@+id/btUpload"
        android:layout_marginBottom="23dp" />

    

    <TextView
        android:id="@+id/tvBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tvBufferView"
        android:layout_alignTop="@+id/tvBufferView"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_buffer" />
    
    <TextView
        android:id="@+id/tvBufferView"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btUpload"
        android:layout_alignTop="@+id/btUpload"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/btUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="40dp"
        android:layout_alignRight="@+id/etGroupId"
        android:text="@string/bt_upload" />

    
</RelativeLayout>